--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,13 +1,55 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-buttons slot="start">
+      <ion-button>
+        <ion-icon name="home"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title>AulaManager</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">login</ion-title>
+      <ion-title size="large">AulaManager</ion-title>
     </ion-toolbar>
   </ion-header>
+
+
+  <div class="welcome-message">
+    <p>Bienvenido Estudiante</p>
+    <hr>
+    <ion-card class="info-box">
+      <ion-card-content>
+        <p>Necesitas iniciar sesión para realizar una reserva.</p>
+      </ion-card-content>
+    </ion-card>
+    <hr>
+  </div>
+
+  <div class="input-container">
+    <ion-item>
+      <ion-label position="floating">Correo</ion-label>
+      <ion-input type="email" required [(ngModel)]="email"></ion-input>
+    </ion-item>
+    
+    <ion-item>
+      <ion-label position="floating">Contraseña</ion-label>
+      <ion-input type="password" required [(ngModel)]="password"></ion-input>
+    </ion-item>
+  </div>
+
+  <div class="button-container">
+    <ion-button expand="full" class="custom-button" (click)="login()">Iniciar Sesión</ion-button>
+  </div>
+
+  <div class="register-message">
+    <p>¿No tienes cuenta? <a routerLink="/registro">¡Regístrate!</a></p>
+  </div>
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-title size="small" class="footer-title">© 2024 AulaManager. Todos los derechos reservados.</ion-title>
+  </ion-toolbar>
+</ion-footer>
