--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -82,4 +82,15 @@ ion-toolbar {
         text-align: center;
         margin: 0px 30;
     }
+    .welcome-card {
+        background-color: #6482AD;
+        margin: 0px 30px;
+    }
     
+    .welcome-card p {
+        font-size: 16px;
+        color: #F5EDED;
+        line-height: 1.5;
+        text-align: center;
+        margin: 0px 30;
+    }
