usuario pruebas alumno

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -13,7 +13,7 @@
   <div class="welcome-message">
     <ion-card class="welcome-card">
       <ion-card-content>
-        <p>Bienvenido, {{ username }}</p>
+        <p>Bienvenido, {{ username }}</p> <!-- Usando username -->
       </ion-card-content>
     </ion-card>
     <hr>
@@ -45,6 +45,7 @@
     <p>¿No tienes cuenta? <a routerLink="/registro">¡Regístrate!</a></p>
   </div>
 </ion-content>
+
 <ion-footer>
   <ion-toolbar>
     <ion-title size="small" class="footer-title">© 2024 AulaManager. Todos los derechos reservados.</ion-title>
