--- a/src/app/hacer-reserva/hacer-reserva.page.html
+++ b/src/app/hacer-reserva/hacer-reserva.page.html
@@ -5,7 +5,7 @@
         <ion-icon name="home"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title>Crear Reserva</ion-title>
+    <ion-title>Historial Reservas</ion-title>
   </ion-toolbar>
 </ion-header>
 
