--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -15,8 +15,13 @@
     <ion-button expand="full" class="custom-button" (click)="goToModificarReserva()">Editar Reserva</ion-button>
     <ion-button expand="full" class="custom-button" (click)="goToHistorialReserva()">Historial de Reservas</ion-button>
   </div>
-</ion-content>
 
+  <div class="image-container">
+    <img src="assets/imagenes/Horario-2.jpg" class="image" alt="Descripción de Horario 1" />
+    <img src="assets/imagenes/Horario-1.jpg" class="image" alt="Descripción de Horario 2" />
+    <img src="assets/imagenes/Horario-3.jpg" class="image" alt="Descripción de Horario 3" />
+  </div>
+</ion-content>
 
 <ion-footer>
   <ion-toolbar>
