--- a/src/app/hacer-reserva/hacer-reserva.page.html
+++ b/src/app/hacer-reserva/hacer-reserva.page.html
@@ -5,7 +5,7 @@
         <ion-icon name="home"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title>Historial Reservas</ion-title>
+    <ion-title>Reservar Salón</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -17,10 +17,25 @@
       </ion-card-content>
     </ion-card>
   </div>
-  </ion-content>
 
-    <ion-footer>
-      <ion-toolbar>
-        <ion-title size="small" class="footer-title">© 2024 AulaManager. Todos los derechos reservados.</ion-title>
-      </ion-toolbar>
-    </ion-footer>
+  <div class="grid-container">
+    <div *ngFor="let salon of salones" class="salon-card">
+      <img [src]="salon.imagen" [alt]="salon.nombre" class="salon-image" />
+      <h3>{{ salon.nombre }}</h3>
+      
+      <label for="fecha">Fecha:</label>
+      <input type="date" [(ngModel)]="salon.fecha">
+
+      <label for="hora">Hora:</label>
+      <input type="time" [(ngModel)]="salon.hora">
+
+      <ion-button expand="block" (click)="reservar(salon)">Reservar</ion-button>
+    </div>
+  </div>
+</ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-title size="small" class="footer-title">© 2024 AulaManager. Todos los derechos reservados.</ion-title>
+  </ion-toolbar>
+</ion-footer>
