--- a/src/app/hacer-reserva/hacer-reserva.page.scss
+++ b/src/app/hacer-reserva/hacer-reserva.page.scss
@@ -1,97 +1,75 @@
 // Estilos para el título
 ion-toolbar {
     --background: #6482AD;
-    }
-    
-    ion-title {
+  }
+  
+  ion-title {
     font-family: sans-serif;
     font-size: 20px;
-    }
-    
-    ion-icon {
+  }
+  
+  ion-icon {
     font-size: 30px;
     color: #F5EDED;
-    }
-    
-    ion-content {
+  }
+  
+  ion-content {
     padding: 20px;
-    }
-    
-    // Estilos para el footer
-    ion-footer {
+  }
+  
+  // Estilos para la cuadrícula de salones
+  .grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); // 3 columnas para las 12 imágenes
+    gap: 20px;
+    padding: 10px;
+  }
+  
+  .salon-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f9f9f9;
+    padding: 15px;
+    border-radius: 10px;
+  }
+  
+  .salon-image {
+    width: 100%;
+    max-width: 200px;
+    height: auto;
+    margin-bottom: 10px;
+  }
+  
+  h3 {
+    margin: 10px 0;
+  }
+  
+  ion-button {
+    margin-top: 10px;
+  }
+  
+  // Estilos para el footer
+  ion-footer {
     --background: #6482AD;
-    }
-    
-    .footer-title {
+  }
+  
+  .footer-title {
     font-size: 14px;
     text-align: center;
     color: #F5EDED;
-    }
-    
-    // Estilos para los formularios
-    form {
-    margin-top: 20px;
-    }
-    
-    ion-item {
-    margin-bottom: 15px;
+  }
+  
+  // Estilos adicionales
+  .welcome-card {
+    background-color: #6482AD;
     margin: 0px 30px;
-    }
-    
-    // Estilos para los botones
-    
-    .welcome-message {
-    margin: 20px 0px;
-    }
-    
-    .button-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    justify-content: center;
-    margin: 0px 30px;
-    }
-    
-    .custom-button {
-        width: 100%;
-        height: 50px;
-        margin: 10px 0;
-        border-radius: 25px;
-        --ion-color: #F5EDED;
-        --background: #6482AD;
-        font-size: 16px;
-        text-align: center;
-        text-transform: uppercase;
-    }
-    .register-message {
+  }
+  
+  .welcome-card p {
+    font-size: 16px;
+    color: #F5EDED;
     text-align: center;
-    margin-top: 20px;
-    color: #666;
-    }
-    
-    .info-box {
-        background-color: #6482AD;
-        margin: 0px 30px;
-    }
-    
-    .info-box p {
-        font-size: 16px;
-        color: #F5EDED;
-        line-height: 1.5;
-        text-align: center;
-        margin: 0px 30px;
-    }
-    .welcome-card {
-        background-color: #6482AD;
-        margin: 0px 30px;
-    }
-    
-    .welcome-card p {
-        font-size: 16px;
-        color: #F5EDED;
-        line-height: 1.5;
-        text-align: center;
-        margin: 0px 30px;
-    }
-
-      
+    margin: 0px;
+  }
+  
