Modificacion en admin

--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -111,8 +111,8 @@ ion-toolbar {
       }
       
       ion-slide img {
-        width: 300px; // Ancho de la imagen
-        height: 300px; // Alto de la imagen
-        object-fit: cover; // Ajusta la imagen sin deformarla
+        width: 300px;
+        height: 300px;
+        object-fit: cover;
       }
       
