--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -6,6 +6,11 @@
       </ion-button>
     </ion-buttons>
     <ion-title>Menu Principal</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="  logout()">Cerrar Sesion
+        <ion-icon name="close-circle"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
