--- a/src/app/admin/admin.page.scss
+++ b/src/app/admin/admin.page.scss
@@ -43,27 +43,12 @@ margin: 0px 30px;
 .welcome-message {
 margin: 20px 0px;
 }
-
-.button-container {
-display: flex;
-flex-direction: column;
-align-items: center; 
-justify-content: center;
-margin: 0 30px;
-margin-top: 20px;
-}
-
-.custom-button {
-width: 100%;
-height: 50px;
-margin: 10px 0;
-border-radius: 25px;
---ion-color: #F5EDED;
---background: #6482AD;
-font-size: 16px;
-text-align: center;
-text-transform: uppercase;
-}
+.acordeon-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 30px;
+  }
 .register-message {
 text-align: center;
 margin-top: 20px;
