--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -5,9 +5,9 @@
         <ion-icon name="home"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title>Panel de Administracion</ion-title>
+    <ion-title>Panel de Administración</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="  logout()">Cerrar Sesion
+      <ion-button (click)="logout()">Cerrar Sesión
         <ion-icon name="close-circle"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -22,45 +22,45 @@
       </ion-card-content>
     </ion-card>
   </div>
-  </ion-content>
-  <div class="acordeon-conteiner">
+
+  <div class="acordeon-container">
     <ion-accordion-group>
       <ion-accordion value="first">
         <ion-item slot="header" color="light">
           <ion-label>Crear Alumno</ion-label>
         </ion-item>
-        <div class="ion-padding" slot="content">Crear:</div>
+        <div class="ion-padding" slot="content">Formulario para crear un alumno</div>
       </ion-accordion>
       <ion-accordion value="second">
         <ion-item slot="header" color="light">
           <ion-label>Editar Alumno</ion-label>
         </ion-item>
-        <div class="ion-padding" slot="content">Modificar:</div>
+        <div class="ion-padding" slot="content">Formulario para editar un alumno</div>
       </ion-accordion>
       <ion-accordion value="third">
         <ion-item slot="header" color="light">
           <ion-label>Eliminar Alumno</ion-label>
         </ion-item>
-        <div class="ion-padding" slot="content">Eliminar:</div>
+        <div class="ion-padding" slot="content">Formulario para eliminar un alumno</div>
       </ion-accordion>
-      <ion-accordion value="Fourth">
+      <ion-accordion value="fourth">
         <ion-item slot="header" color="light">
-          <ion-label>Historial Alumno</ion-label>
+          <ion-label>Historial de Alumnos</ion-label>
         </ion-item>
-        <div class="ion-padding" slot="content">Historial:</div>
+        <div class="ion-padding" slot="content">Ver historial de alumnos</div>
       </ion-accordion>
-      <ion-accordion value="Fifth">
+      <ion-accordion value="fifth">
         <ion-item slot="header" color="light">
           <ion-label>Tickets</ion-label>
         </ion-item>
-        <div class="ion-padding" slot="content">Atender:</div>
+        <div class="ion-padding" slot="content">Atender tickets de alumnos</div>
       </ion-accordion>
     </ion-accordion-group>
   </div>
-
+</ion-content>
 
 <ion-footer>
   <ion-toolbar>
-    <ion-title size="small" class="footer-title">© 2024 AulaManager. Seccion Administracion Derechos Reservados.</ion-title>
+    <ion-title size="small" class="footer-title">© 2024 AulaManager. Sección Administración. Todos los derechos reservados.</ion-title>
   </ion-toolbar>
 </ion-footer>
