--- a/src/app/admin/admin.page.scss
+++ b/src/app/admin/admin.page.scss
@@ -1,103 +1,78 @@
 // Estilos para el título
 ion-toolbar {
---background: #6482AD;
-}
-
-ion-title {
-font-family: sans-serif;
-font-size: 20px;
-}
-
-ion-icon {
-font-size: 30px;
-color: #F5EDED;
-}
-
-ion-content {
-padding: 20px;
-}
-
-// Estilos para el footer
-ion-footer {
---background: #6482AD;
-}
-
-.footer-title {
-font-size: 14px;
-text-align: center;
-color: #F5EDED;
-}
-
-// Estilos para los formularios
-form {
-margin-top: 20px;
-}
-
-ion-item {
-margin-bottom: 15px;
-margin: 0px 30px;
-}
-
-// Estilos para los botones
-
-.welcome-message {
-margin: 20px 0px;
-}
-.acordeon-container {
+    --background: #6482AD;
+  }
+  
+  ion-title {
+    font-family: sans-serif;
+    font-size: 20px;
+    color: #F5EDED;
+  }
+  
+  ion-icon {
+    font-size: 30px;
+    color: #F5EDED;
+  }
+  
+  ion-content {
+    padding: 20px;
+  }
+  
+  // Estilos para los acordeones
+  .acordeon-container {
+    margin: 20px 30px;
+  }
+  
+  ion-accordion {
+    margin-bottom: 15px;
+    --background: #F5EDED;
+  }
+  
+  ion-item {
+    --color: #333;
+    --background: #6482AD;
+  }
+  
+  ion-label {
+    font-size: 18px;
+    font-weight: bold;
+    color: #F5EDED;
+  }
+  
+  .ion-padding {
+    font-size: 16px;
+    color: #666;
+  }
+  
+  // Estilos para el botón "Ir al Menú de Alumnos"
+  .button-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 30px;
+    justify-content: center;
+    margin: 20px 30px;
   }
-.register-message {
-text-align: center;
-margin-top: 20px;
-color: #666;
-}
-
-.info-box {
-background-color: #6482AD;
-margin: 0px 30px;
-}
-
-.info-box p {
-font-size: 16px;
-color: #F5EDED;
-line-height: 1.5;
-text-align: center;
-margin: 0px 30px;
-}
-.welcome-card {
-background-color: #6482AD;
-margin: 0px 30px;
-}
-
-.welcome-card p {
-font-size: 16px;
-color: #F5EDED;
-line-height: 1.5;
-text-align: center;
-margin: 0px 30px;
-}
-
-ion-slides {
-display: flex;
-justify-content: center;
-align-items: center;
-height: 300px;
-margin-top: 20px;
-margin: 0px 30px;
-}
-
-ion-slide {
-display: flex;
-justify-content: center;
-align-items: center;
-height: 300px; // Altura del slide
-}
-
-ion-slide img {
-width: 300px;
-height: 300px;
-object-fit: cover;
-}
+  
+  .custom-button {
+    width: 100%;
+    height: 50px;
+    margin: 10px 0;
+    border-radius: 25px;
+    --ion-color: #F5EDED;
+    --background: #6482AD;
+    font-size: 16px;
+    text-align: center;
+    text-transform: uppercase;
+  }
+  
+  // Estilos para el footer
+  ion-footer {
+    --background: #6482AD;
+  }
+  
+  .footer-title {
+    font-size: 14px;
+    text-align: center;
+    color: #F5EDED;
+  }
+  
