--- a/src/app/editar-reserva/editar-reserva.page.html
+++ b/src/app/editar-reserva/editar-reserva.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-button (click)="goBack()">
-        <ion-icon name="home"></ion-icon>
+        <ion-icon name="arrow-back"></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-title>Editar Reserva</ion-title>
@@ -17,10 +17,27 @@
       </ion-card-content>
     </ion-card>
   </div>
-  </ion-content>
 
-    <ion-footer>
-      <ion-toolbar>
-        <ion-title size="small" class="footer-title">© 2024 AulaManager. Todos los derechos reservados.</ion-title>
-      </ion-toolbar>
-    </ion-footer>
+  <form (ngSubmit)="guardarReserva()">
+    <ion-item>
+      <ion-label position="floating">Nombre de la Reserva</ion-label>
+      <ion-input type="text" [(ngModel)]="reservaEditada.nombre" name="nombre" required></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Fecha</ion-label>
+      <ion-input type="date" [(ngModel)]="reservaEditada.fecha" name="fecha" required></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Hora</ion-label>
+      <ion-input type="time" [(ngModel)]="reservaEditada.hora" name="hora" required></ion-input>
+    </ion-item>
+
+    <ion-button expand="full" type="submit">Guardar Cambios</ion-button>
+  </form>
+</ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-title size="small" class="footer-title">© 2024 AulaManager. Todos los derechos reservados.</ion-title>
+  </ion-toolbar>
+</ion-footer>
