--- a/src/app/menu/menu.page.scss
+++ b/src/app/menu/menu.page.scss
@@ -1,6 +1,7 @@
 // Estilos para el título
 ion-toolbar {
---background: #6482AD;
+--background: #a18594;
+color:white
 }
 
 ion-title {
@@ -19,7 +20,7 @@ padding: 20px;
 
 // Estilos para el footer
 ion-footer {
---background: #6482AD;
+--background: #a18594;
 }
 
 .footer-title {
@@ -59,7 +60,7 @@ height: 50px;
 margin: 10px 0;
 border-radius: 25px;
 --ion-color: #F5EDED;
---background: #6482AD;
+--background: #a18594;
 font-size: 16px;
 text-align: center;
 text-transform: uppercase;
@@ -71,7 +72,7 @@ color: #666;
 }
 
 .info-box {
-background-color: #6482AD;
+background-color: #a18594;
 margin: 0px 30px;
 }
 
@@ -83,7 +84,7 @@ text-align: center;
 margin: 0px 30;
 }
 .welcome-card {
-background-color: #6482AD;
+background-color: #a18594;
 margin: 0px 30px;
 }
 
