Incorporacion Base de datos
Se agrega base de datos en xampp,
Creacion de usuarios, insercion de datos,
ajustes menores en scss.

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -13,7 +13,7 @@
   <div class="welcome-message">
     <ion-card class="welcome-card">
       <ion-card-content>
-        <p>Bienvenido, {{ username }}</p>
+        <p>Bienvenido, Usuario</p>
       </ion-card-content>
     </ion-card>
     <hr>
