--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button (click)="goBack()">
+      <ion-button (click)="logout()">
         <ion-icon name="home"></ion-icon>
       </ion-button>
     </ion-buttons>
