--- a/src/app/registro/registro.page.scss
+++ b/src/app/registro/registro.page.scss
@@ -1,6 +1,6 @@
 // Estilos para el título
 ion-toolbar {
-    --background: #6482AD;
+    --background: #a18594;
     }
     
     ion-title {
@@ -19,7 +19,7 @@ ion-toolbar {
     
     // Estilos para el footer
     ion-footer {
-    --background: #6482AD;
+    --background: #a18594;
     }
     
     .footer-title {
@@ -58,7 +58,7 @@ ion-toolbar {
         margin: 10px 0;
         border-radius: 25px;
         --ion-color: #F5EDED;
-        --background: #6482AD;
+        --background: #a18594;
         font-size: 16px;
         text-align: center;
         text-transform: uppercase;
@@ -70,7 +70,7 @@ ion-toolbar {
     }
     
     .info-box {
-        background-color: #6482AD;
+        background-color: #a18594;
         margin: 0px 30px;
     }
     
