--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -15,6 +15,14 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <div class="welcome-message">
+    <ion-card class="welcome-card">
+      <ion-card-content>
+        <p>Bienvenido, {{ username }}</p>
+      </ion-card-content>
+    </ion-card>
+  </div>
+
   <div class="button-container">
     <ion-button expand="full" class="custom-button" (click)="goToReserva()">Realizar Reserva</ion-button>
     <ion-button expand="full" class="custom-button" (click)="goToModificarReserva()">Editar Reserva</ion-button>
