--- a/src/global.scss
+++ b/src/global.scss
@@ -39,5 +39,5 @@ ion-content{
     --background: #f2f0eb;
 }
 :root {
-    --ion-background-color:#f2f0eb; /* Cambia este valor por el color que prefieras */
+    --ion-background-color:#a18594 /* Cambia este valor por el color que prefieras */
   }
